カメラ関連の処理を別クラスに分離

--- a/AutoSendPic/AutoSendPic.csproj
+++ b/AutoSendPic/AutoSendPic.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CameraManager.cs" />
+    <Compile Include="Model\DataEventArgs.cs" />
     <Compile Include="Model\DataManager.cs" />
     <Compile Include="Model\ExceptionEventArgs.cs" />
     <Compile Include="Model\PicData.cs" />
