--- a/AutoSendPic/Properties/AndroidManifest.xml
+++ b/AutoSendPic/Properties/AndroidManifest.xml
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="jp.opap.autosendpic">
-	<uses-sdk android:targetSdkVersion="15" />
-	<application android:label="AutoSendPic"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="jp.opap.autosendpic" android:versionCode="1" android:versionName="1.0">
+	<uses-sdk android:targetSdkVersion="14" />
+	<application android:label="AutoSendPic" android:icon="@drawable/icon"></application>
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.FLASHLIGHT" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 </manifest>
